--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 										</header>
 										<p>this is my worksheet 1.1.Display your Personal information, Educational Background, and Work Experience or Hobbies in the webpage.</p>
 										<ul class="actions">
-											<li><a href="my biodata.html" class="button">Go to worksheet 1.1</a></li>
+											<li><a href="../hyperlink/my biodata.html" class="button">Go to worksheet 1.1</a></li>
 										</ul>
 									</div>
 								</div>
