--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Satria Pangestu</title>
-		<link rel="stylesheet" href="main.css" />
+		<link rel="stylesheet" href="hyperlink/main.css" />
 	</head>
 	<body >
 			<div >
