--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Satria Pangestu</title>
-		<link rel="stylesheet" href="hyperlink/main.css" />
+		<link rel="stylesheet" href="Worksheet-1.4-/hyperlink/main.css" />
 	</head>
 	<body >
 			<div >
@@ -29,7 +29,7 @@
 										</header>
 										<p>this is my worksheet 1.1.Display your Personal information, Educational Background, and Work Experience or Hobbies in the webpage.</p>
 										<ul class="actions">
-											<li><a href="hyperlink/my biodata.html" class="button">Go to worksheet 1.1</a></li>
+											<li><a href="Worksheet-1.4-/hyperlink/my biodata.html" class="button">Go to worksheet 1.1</a></li>
 										</ul>
 									</div>
 								</div>
